--- a/email.html
+++ b/email.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <body style="margin:0; padding:0; font-family: Arial, sans-serif; background-color: #f7f7f7;">
+  <body style="margin:0; padding:0; font-family: Arial, sans-serif; background-color:#f7f7f7;">
     <div style="max-width:600px; margin:auto; background-color:#ffffff; border:1px solid #ddd; padding:0;">
 
       <!-- Header Image -->
-      <img src="img/Email heder2.png" alt="Header" style="display:block; width:100%; height:auto; border:0; margin:0; padding:0; line-height:0;">
+      <img src="https://github.com/divyangshu-19/Email-template/blob/master/img/Email%20heder2.png?raw=true" alt="Header" style="display:block; width:100%; height:auto; border:0; margin:0; padding:0; line-height:0;">
 
-      <!-- Body -->
+      <!-- Email Body -->
       <div style="padding:20px; font-size:14px; color:#333333;">
         <p>Hello,</p>
         <p>This is where your email content will go.</p>
@@ -14,7 +14,7 @@
       </div>
 
       <!-- Footer Decoration Image -->
-      <img src="img/Footer.png" alt="Footer Decoration" style="display:block; width:100%; height:auto; border:0; margin:0; padding:0; line-height:0;">
+      <img src="https://github.com/divyangshu-19/Email-template/blob/master/img/Footer.png?raw=true" alt="Footer Decoration" style="display:block; width:100%; height:auto; border:0; margin:0; padding:0; line-height:0;">
 
       <!-- Footer Links -->
       <div style="background-color:#010F1B; padding:15px 20px; color:#ffffff; font-size:13px; text-align:center;">
